Add quotes support & minor Executor refactoring